task4-2/controll/daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: t42-ds
  namespace: task42
  labels:
    app: t42
spec:
  selector:
    matchLabels:
      app: t42
  template:
    metadata:
      labels:
        app: t42
    spec:
      containers:
      - name: t42
        image: murilotico/t42:v2
        resources:
          limits:
            memory: 200Mi
          requests:
            cpu: 100m
            memory: 200Mi
        volumeMounts:
        - name: varlog
          mountPath: /var/log
      terminationGracePeriodSeconds: 30
      volumes:
      - name: varlog
        hostPath:
          path: /var/log
