task4-2/controll/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: t42-svc
  namespace: task42
spec:
  selector:
    app: t42 
  ports:
    - protocol: TCP
      port: 80 # Porta do serviço
      targetPort: 6000 # Porta do contêiner
  type: ClusterIP
