task4-2/controll/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: t42-igs
  namespace: task42
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: dominio42.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: t42-svc
                port:
                  number: 80
